cmake_minimum_required(VERSION 3.28)
project(NES LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
add_subdirectory(SFML)
file(GLOB NES_SRC "src/*.cpp")
add_executable(main ${NES_SRC} "main.cpp")
target_include_directories(main PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
target_link_libraries(main PRIVATE sfml-graphics sfml-window sfml-system)
install(TARGETS main DESTINATION bin)